--- a/templates/items/_footer.html.twig
+++ b/templates/items/_footer.html.twig
@@ -34,7 +34,7 @@
 				</a>
 			</div>
 		{% else %}
-			<a class="btn btn-secondary text-dark" href="{{ path('login') }}">
+			<a class="btn btn-secondary text-dark mb-2" href="{{ path('login') }}">
 				<i class="bi bi-shield-lock-fill me-2"></i>Espace admin</a>
 		{% endif %}
 	</div>
