--- a/templates/contact/_form.html.twig
+++ b/templates/contact/_form.html.twig
@@ -1,4 +1,9 @@
 <div class="contactElement col-lg-7 bg-white p-4 rounded">
+	<div class="mb-4">
+		Pour toute demande ou prise de rendez-vous, vous pouvez me contacter par téléphone au
+		<b>06 32 56 01 27</b>
+		ou via le formulaire ci-dessous :
+	</div>
 	{{ form_start(form) }}
 	<div class="row mb-3">
 		<div class="input-group">
@@ -38,5 +43,4 @@
 	<div class="row justify-content-end m-0">
 		<button class="formButton btn btn-primary col-12 col-lg-2">Envoyer</button>
 	</div>
-	{{ form_end(form) }}
-</div>
+	{{ form_end(form) }}</div>
