--- a/templates/items/_footer.html.twig
+++ b/templates/items/_footer.html.twig
@@ -1,30 +1,17 @@
-<footer class="footer container-fluid footer-expand-lg bg-primary sticky-bottom d-flex flex-lg-row flex-column justify-content-around align-items-center mt-5" id="footer">
-	<div class="details d-flex flex-column">
-		<span class="text-center m-1 mt-3 text-light fs-4">Jennifer Quenault - Réflexologue</span>
-		<span class="m-1 text-light">
-			<i class="bi bi-geo-alt-fill me-3"></i>5 rue Notre Dame, 36400 La Châtre</span>
-		<span class="m-1 text-light">
-			<i class="bi bi-telephone-fill me-3"></i>06 32 56 01 27</span>
-		<span class="m-1 mb-3 text-light">
-			<i class="bi bi-envelope-fill me-3"></i>voyagedessens.reflexo@gmail.com</span>
-	</div>
-	<div class="networks d-flex justify-content-between">
-		<div class="d-flex flex-column align-items-center">
-			<span class="text-light fs-4 m-1 mt-3">Retrouvez-moi sur mes réseaux</span>
-			<div class="links d-flex w-100 justify-content-around my-1">
-				<a href="https://www.instagram.com/voyage_des_sens_reflexologie/" class="instagram" target="_blank">
-					<i class="bi bi-instagram fs-2"></i>
-				</a>
-				<a href="https://www.facebook.com/jenniferquenaultreflexologue" class="facebook" target="_blank">
-					<i class="bi bi-facebook fs-2"></i>
-				</a>
-			</div>
-			<a href="#" class="legal-notice m-1">Mentions légales</a>
-			<a href="#" class="general-conditions m-1 mb-3">Conditions générales</a>
+<footer class="footer row m-0 footer-expand-lg bg-primary sticky-bottom justify-content-around align-items-center mt-5" id="footer">
+	<div class="networks d-flex flex-column flex-lg-row align-items-center col-3">
+		<span class="text-light fs-4 m-1">Mes réseaux :</span>
+		<div class="links d-flex w-50 justify-content-around my-1">
+			<a href="https://www.instagram.com/voyage_des_sens_reflexologie/" class="instagram" target="_blank">
+				<i class="bi bi-instagram fs-2"></i>
+			</a>
+			<a href="https://www.facebook.com/jenniferquenaultreflexologue" class="facebook" target="_blank">
+				<i class="bi bi-facebook fs-2"></i>
+			</a>
 		</div>
 	</div>
-	<div class="adminLogo d-flex flex-column justify-content-around align-items-center">
-		<img class="mb-4" src="{{ asset('build/images/VDS_Badge_Marigold.svg') }}" alt="">
+	<img class="logoFooter m-2 col-3" src="{{ asset('build/images/VDS_Badge_Marigold.svg') }}" alt="Logo Voyage des sens bas de page">
+	<div class="d-flex flex-column justify-content-between align-items-center justify-content-center col-3">
 		{% if app.user %}
 			<div class="d-flex">
 				<a class="btn btn-secondary text-dark" href="{{ path('app_logout') }}">
@@ -34,9 +21,12 @@
 				</a>
 			</div>
 		{% else %}
-			<a class="btn btn-secondary text-dark mb-2" href="{{ path('login') }}">
+			<a class="btn btn-secondary text-dark m-2" href="{{ path('login') }}">
 				<i class="bi bi-shield-lock-fill me-2"></i>Espace admin</a>
 		{% endif %}
+		<div class="d-flex flex-column flex-lg-row w-100 justify-content-between">
+			<a href="#" class="legal-notice m-1 text-center">Mentions légales</a>
+			<a href="#" class="general-conditions m-1 text-center">Conditions générales</a>
+		</div>
 	</div>
-
 </footer>
