--- a/templates/presentation/_reflexology.html.twig
+++ b/templates/presentation/_reflexology.html.twig
@@ -1,15 +1,30 @@
-<p>La réflexologie apporte un soulagement des tensions tant physiques qu'émotionnelles et accompagne les personnes dans la gestion de différents troubles (sommeil, stress, douleur, fatigue, troubles du système urinaire, troubles du système digestif, troubles du système respiratoire etc...) 
-
-Le réflexologue est un professionnel du bien-être et du développement personnel. Son but premier est d'améliorer la qualité de vie du bénéficiaire, en améliorant son bien-être au quotidien.
-
-La réflexologie permet un retour à l'homéostasie, c'est à dire un retour à l'équilibre du corps humain. Cela est permis par la stimulation de zones ou de points réflexes, qui vont véhiculer un message nerveux jusqu'au cerveau. Le cerveau va ensuite traiter l'information et entraîner une régulation des zones afin de retrouver cet état d'équilibre.
-</p>
-<p>
-
-Je pratique la méthode Fischmann qui est une méthode merveilleuse qui a plusieurs particularités. 
-
-    ●La méthode Fischman se pratique sur les mains , les pieds , les oreilles et le visage. Vous vous sentez ainsi enveloppé durant toute la séance dans une bulle de bien-être. 
-    ●Cette méthode combine puissance et douceur par des techniques manuelles (pression, lissage...) et des techniques instrumentales (bâton de verre, chaufferette...). Les instruments sont très doux et agréables à recevoir. Ils ont la spécificité d'agir sur les zones ou points réflexes en étant plus puissants et plus précis que les mains. 
-    ●Cette méthode permet un réel lâcher-prise par son ambiance spa et l'accompagnement psycho-corporel durant la séance. Vous sortirez de chaque séance léger et apaisé 
-    ●Un protocole personnalisé à vos besoins sera créé à chaque séance. 
-    ●Également, des gestes d'autostimulations vous seront enseignés vous permettant d'être acteur de votre bien-être en stimulant certaines zones réflexes une fois chez vous.</p>
+<div class="presentationElement p-3 row flex-lg-row flex-column m-0 bg-light">
+	<span class="p-0 mb-3">
+		<h2 class="presentationTitle text-primary p-0 fs-2">La réflexologie</h2>
+	</span>
+	<img class="reflexologyPresentation col-lg-3 p-0 rounded" src="{{ asset('build/images/reflexology.jpg') }}" alt="">
+	<p class="col-lg-9 mt-3 mt-lg-0 p-0 ps-lg-3">La réflexologie apporte un soulagement des tensions tant physiques qu'émotionnelles et accompagne les personnes dans la gestion de différents troubles (sommeil, stress, douleur, fatigue, troubles du système urinaire, troubles du système digestif, troubles du système respiratoire etc...).
+		<br><br>
+		Le réflexologue est un professionnel du bien-être et du développement personnel. Son but premier est d'améliorer la qualité de vie du bénéficiaire, en améliorant son bien-être au quotidien.
+		<br><br>
+		La réflexologie permet un retour à l'homéostasie, c'est à dire un retour à l'équilibre du corps humain. Cela est permis par la stimulation de zones ou de points réflexes, qui vont véhiculer un message nerveux jusqu'au cerveau. Le cerveau va ensuite traiter l'information et entraîner une régulation des zones afin de retrouver cet état d'équilibre.
+		<br><br></p>
+	<ul class="mt-lg-3 p-0">
+		Je pratique la méthode Fischmann qui est une méthode merveilleuse qui a plusieurs particularités.
+		<li class="ms-3 mt-2">
+			La méthode Fischman se pratique sur les mains , les pieds , les oreilles et le visage. Vous vous sentez ainsi enveloppé durant toute la séance dans une bulle de bien-être.
+		</li>
+		<li class="ms-3 mt-2">
+			Cette méthode combine puissance et douceur par des techniques manuelles (pression, lissage...) et des techniques instrumentales (bâton de verre, chaufferette...). Les instruments sont très doux et agréables à recevoir. Ils ont la spécificité d'agir sur les zones ou points réflexes en étant plus puissants et plus précis que les mains.
+		</li>
+		<li class="ms-3 mt-2">
+			Cette méthode permet un réel lâcher-prise par son ambiance spa et l'accompagnement psycho-corporel durant la séance. Vous sortirez de chaque séance léger et apaisé
+		</li>
+		<li class="ms-3 mt-2">
+			Un protocole personnalisé à vos besoins sera créé à chaque séance.
+		</li>
+		<li class="ms-3 mt-2">
+			Également, des gestes d'autostimulations vous seront enseignés vous permettant d'être acteur de votre bien-être en stimulant certaines zones réflexes une fois chez vous.
+		</li>
+	</ul>
+</div>
