--- a/templates/presentation/index.html.twig
+++ b/templates/presentation/index.html.twig
@@ -11,9 +11,8 @@
 
 {% block body %}
 	<h1 class="pageTitle text-primary my-5 fs-1">Présentation</h1>
-	<section>
+	<section class="row gap-5 m-0">
 		{% include "presentation/_myJourney.html.twig" %}
-		<h2>La réflexologie</h2>
 		{% include "presentation/_reflexology.html.twig" %}
 	</section>
 {% endblock %}
