--- a/templates/presentation/_myJourney.html.twig
+++ b/templates/presentation/_myJourney.html.twig
@@ -1,9 +1,9 @@
-<div class="presentationElement p-3 row m-0 justify-content-between bg-light">
-	<span class="p-0">
+<div class="presentationElement p-3 row flex-lg-row flex-column m-0 bg-light">
+	<span class="p-0 mb-3">
 		<h2 class="presentationTitle text-primary p-0 fs-2">Mon parcours</h2>
 	</span>
-	<img class="presentationImage col-4 p-0" src="{{ asset('build/images/myJourney.jpg') }}" alt="">
-	<p class="col-7">Une petite présentation de mon parcours.
+	<img class="myJourney col-lg-3 p-0 rounded" src="{{ asset('build/images/myJourney.jpg') }}" alt="">
+	<p class="col-lg-9 mt-3 mt-lg-0 p-0 ps-lg-3">Une petite présentation de mon parcours.
 		<br><br>
 		Infirmière depuis 2017, je me suis reconvertie vers les métiers du bien-être en 2020. Je ressentais l'envie, par le toucher, la relaxation et la détente de continuer à accompagner les personnes vers un mieux être et de participer à améliorer leur qualité de vie au quotidien.
 		<br><br>
