--- a/templates/items/_navbar.html.twig
+++ b/templates/items/_navbar.html.twig
@@ -8,11 +8,11 @@
 			</span>
 		</div>
 	</div>
-	<div class="container-fluid justify-content-end">
+	<div class="container-fluid">
 		<button class="navbar-toggler m-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
-		<div class="collapse navbar-nav navbar-collapse align-items-end justify-content-lg-center" id="navbarSupportedContent">
+		<div class="collapse navbar-nav navbar-collapse justify-content-lg-center" id="navbarSupportedContent">
 			<a class="nav-item nav-link fs-5 ms-lg-1 me-2" href="{{ path('home') }}">Accueil</a>
 			<a class="nav-item nav-link fs-5 ms-lg-1 me-2" href="{{ path('presentation') }}">Présentation</a>
 			<a class="nav-item nav-link fs-5 ms-lg-1 me-2" href="{{ path('session_index') }}">Prestations</a>
