navbar link in header

--- a/templates/items/_navbar.html.twig
+++ b/templates/items/_navbar.html.twig
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg bg-secondary navbar-light sticky-top p-0 d-flex flex-column">
 	<div class="topHeader bg-primary d-flex justify-content-center align-items-center p-3 w-100">
-		<img class="logoText mx-3" src="{{ asset('build/images/VDS_Horizontal_Complet_Marigold.png') }}" alt="Logo et texte header"/>
+		<a class="mx-3" href="{{ path('home') }}">
+			<img class="logoText" src="{{ asset('build/images/VDS_Horizontal_Complet_Marigold.png') }}" alt="Logo et texte header"/>
+		</a>
 		<div class="navbarText d-none d-lg-flex flex-column">
 			<span class="text-light fs-3 mx-3">Jennifer Quenault</span>
 			<span class="text-light fs-5 mx-3">
