prices on the way

--- a/templates/items/_navbar.html.twig
+++ b/templates/items/_navbar.html.twig
@@ -18,7 +18,7 @@
 			<a class="nav-item nav-link fs-5 ms-lg-1 me-2" href="{{ path('home') }}">Accueil</a>
 			<a class="nav-item nav-link fs-5 ms-lg-1 me-2" href="{{ path('presentation') }}">Présentation</a>
 			<a class="nav-item nav-link fs-5 ms-lg-1 me-2" href="{{ path('session_index') }}">Prestations</a>
-			<a class="nav-item nav-link fs-5 ms-lg-1 me-2" href="#">Tarifs</a>
+			<a class="nav-item nav-link fs-5 ms-lg-1 me-2" href="{{ path('session_price') }}">Tarifs</a>
 			<a class="nav-item nav-link fs-5 ms-lg-1 me-2" href="{{ path('contact') }}">Contact</a>
 		</div>
 	</div>
