--- a/templates/price/index.html.twig
+++ b/templates/price/index.html.twig
@@ -10,6 +10,8 @@
 
 {% block body %}
 	<h1 class="pageTitle text-primary my-5 fs-1">Tarifs</h1>
-	{% include "price/_rate.html.twig" %}
-	{% include "price/_gift.html.twig" %}
+	<section>
+		{% include "price/_rate.html.twig" %}
+		{% include "price/_gift.html.twig" %}
+	</section>
 {% endblock %}
