--- a/assets/styles/price.scss
+++ b/assets/styles/price.scss
@@ -1,7 +1,32 @@
 @import "variables.scss";
 
-.table{
-    box-shadow   : $shadow-card;
-    border       : 4px solid $secondary;
-    border-radius: $spacing;
+.table {
+    border         : 4px solid $secondary;
+    border-radius  : $spacing;
+    border-collapse: separate;
+    width          : 60%;
+
+    thead tr td span {
+        width        : fit-content;
+        border-bottom: 1px solid $secondary;
+    }
+}
+
+.priceInfos {
+    width: 35%;
+
+    .priceDetails {
+        border       : 2px dashed $secondary;
+        border-radius: $spacing;
+    }
+}
+
+@media screen and (max-width: 991px) {
+    .priceInfos {
+        width: 100%;
+    }
+
+    .table {
+        width: 100%;
+    }
 }
