--- a/templates/price/index.html.twig
+++ b/templates/price/index.html.twig
@@ -10,7 +10,7 @@
 
 {% block body %}
 	<h1 class="pageTitle text-primary my-5 fs-1">Tarifs</h1>
-	<section>
+	<section class="d-flex flex-column gap-5">
 		{% include "price/_rate.html.twig" %}
 		{% include "price/_gift.html.twig" %}
 	</section>
