--- a/assets/styles/price.scss
+++ b/assets/styles/price.scss
@@ -1,6 +1,7 @@
 @import "variables.scss";
 
 .table {
+    box-shadow   : $shadow-card;
     border         : 4px solid $secondary;
     border-radius  : $spacing;
     border-collapse: separate;
@@ -18,7 +19,19 @@
     .priceDetails {
         border       : 2px dashed $secondary;
         border-radius: $spacing;
+        box-shadow   : $shadow-card;
     }
+}
+
+h2{
+    width: fit-content;
+}
+
+.gift {
+    border       : 4px solid $secondary;
+    border-radius: $spacing;
+    box-shadow   : $shadow-card;
+
 }
 
 @media screen and (max-width: 991px) {
