--- a/templates/price/_gift.html.twig
+++ b/templates/price/_gift.html.twig
@@ -1,26 +1,26 @@
-Une petite idée pour gâter vos proches  ? 
+<div class="">
+	<h2 class="pageTitle text-primary mb-5 mt-2 fs-1">Offrir un soin</h2>
+	<div class="gift bg-light p-3">
+		<p>
+			Une petite idée pour gâter vos proches  ?
+			<br><br>
+			Vous voulez prendre soin de vos amis, votre famille, en leur offrant un moment de relaxation et de détente. La réflexologie est le cadeau idéal pour s'évader dans une bulle de bien-être. Une petite attention qui fait du bien et qui permet de refaire le plein d'énergie et de vitalité.
+			<br>
+			<br>
+			Je vous propose ces cartes cadeaux à offrir, que je peux personnaliser en fonction de vos demandes :
+		</p>
+		<ul class="ps-3">
+			<li class="mb-3">Un cadeau de découverte pour une heure de bien être intense : ✨ Les séances personnalisées de réflexologie combinée ✋🏼🦶🏼👂🏼👩🏼‍🦲
+			</li>
+			<li class="my-3">Un cadeau douceur pour un suivi sur plusieurs séances : ✨ Les séances spécifiques : Bien-être et endometriose, Bien-être et maladie de Crohn, Bien-être et sevrage tabagique, Bien-être et fibromyalgie
+			</li>
+			<li class="my-3">Un cadeau pétillant pour retrouver un état d'équilibre : Les cures de bien-être : Anti-stress/Sommeil, Silhouette, Vitalité, Détox et Bien-être du dos
+			</li>
+			<li class="mt-3">Un cadeau à partager à plusieurs pour prendre soin de soi : ✨ Les ateliers d'auto-réflexologie : Mieux dormir, Mieux digérer, Anti-stress, Bien-être du dos
+			</li>
+		</ul>
+		Tout le monde peut bénéficier de ce moment d'évasion et de douceur.
+ Pour recevoir votre carte cadeau, il suffit de me contacter par téléphone au 06 32 56 01 27, par mail à voyagedessens.@gmail.com ou bien directement sur Facebook.
 
-Vous voulez prendre soin de vos amis, votre famille, en leur offrant un moment de relaxation et de détente. 
-
-La réflexologie est le cadeau idéal pour s'évader dans une bulle de bien-être. 
-
-Une petite attention qui fait du bien et qui permet de refaire le plein d'énergie et de vitalité.
-
-Je vous propose ces cartes cadeaux à offrir, que je peux personnaliser en fonction de vos demandes. 
-
-Au choix :
-- Un cadeau de découverte pour une heure de bien être intense :
- ✨ Les séances personnalisées de réflexologie combinée ✋🏼🦶🏼👂🏼👩🏼‍🦲(50 euros)
-
-- Un cadeau douceur pour un suivi sur plusieurs séances :
- ✨ Les séances spécifiques : Bien-être et endometriose, Bien-être et maladie de Crohn, Bien-être et sevrage tabagique, Bien-être et fibromyalgie (135 euros les 3 séances)
-
-- Un cadeau pétillant pour retrouver un état d'équilibre :
- ✨ Les cures de bien-être : Anti-stress/Sommeil, Silhouette, Vitalité, Détox et Bien-être du dos (130 euros les 3 séances)
-
-- Un cadeau à partager à plusieurs pour prendre soin de soi :
- ✨ Les ateliers d'auto-réflexologie : Mieux dormir, Mieux digérer, Anti-stress, Bien-être du dos (80 euros par personne)
-
-Tout le monde peut bénéficier de ce moment d'évasion et de douceur
-
-Pour recevoir votre carte cadeau, il suffit de me contacter par téléphone au 06 32 56 01 27, par mail à voyagedessens.reflexo@gmail.com ou bien directement sur Facebook.
+	</div>
+</div>
