--- a/templates/price/_rate.html.twig
+++ b/templates/price/_rate.html.twig
@@ -1,11 +1,11 @@
 <div class="row table-responsive justify-content-between m-0 gap-4">
-	<table class="table table-striped bg-light shadow-sm m-0 p-0">
+	<table class="table table-striped bg-light p-0">
 		<thead class="text-primary fs-4">
 			<tr>
-				<td class="border-0">
+				<td class="border-0 px-3">
 					<span>Prestation</span>
 				</td>
-				<td class="border-0">
+				<td class="border-0 px-3">
 					<span>Prix</span>
 				</td>
 			</tr>
@@ -13,22 +13,22 @@
 		<tbody>
 			{% for category in categories %}
 				<tr>
-					<td class="align-middle border-0">{{ category.title }}</td>
-					<td class="align-middle border-0">{{ category.priceDescription|nl2br }}</td>
+					<td class="align-middle border-0 p-3">{{ category.title }}</td>
+					<td class="align-middle border-0 p-3">{{ category.priceDescription|nl2br }}</td>
 				</tr>
 			{% endfor %}
 		</tbody>
 	</table>
-	<div class="priceInfos d-flex flex-column justify-content-between text-primary p-0 gap-3">
-		<span class="priceDetails bg-light shadow-sm p-3">
+	<div class="priceInfos d-flex flex-column justify-content-between text-primary p-0 gap-3 mb-3">
+		<span class="priceDetails bg-light p-3">
 			<i class="bi bi-info-circle"></i>
 			Tarif étudiant -10% sur toutes prestations (sur présentation d'un justificatif).
 		</span>
-		<span class="priceDetails bg-light shadow-sm p-3">
+		<span class="priceDetails bg-light p-3">
 			<i class="bi bi-info-circle"></i>
 			Règlements acceptés par chèques ou espèces.
 		</span>
-		<span class="priceDetails bg-light shadow-sm p-3">
+		<span class="priceDetails bg-light p-3">
 			<i class="bi bi-info-circle"></i>
 			Séances remboursées par certaines mutuelles.
 		</span>
