--- a/assets/styles/navbar.scss
+++ b/assets/styles/navbar.scss
@@ -21,6 +21,7 @@
         &:hover {
             color           : $secondary;
             background-color: $primary;
+            transition: 0.3s ease-in;
         }
     }
 }
