--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -9,6 +9,7 @@ body {
     background-image     : url("../images/VDS_Motif_Marigold.svg");
     background-size      : cover;
     background-attachment: fixed;
+    position             : relative;
 }
 
 h1,
