--- a/assets/styles/navbar.scss
+++ b/assets/styles/navbar.scss
@@ -16,12 +16,36 @@
     }
 
     div .navbar-nav .nav-link {
-        color           : $primary;
+        color: $primary;
+
+        &::after {
+            content   : "";
+            width     : 0%;
+            height    : 2px;
+            display   : block;
+            transition: width 0.3s ease-in-out, background-color 0.3s ease-in-out;
+            bottom    : 0%;
+        }
 
         &:hover {
-            color           : $secondary;
-            background-color: $primary;
-            transition: 0.3s ease-in;
+            color: $primary;
+
+            &::after {
+                width           : 100%;
+                height          : 2px;
+                background-color: $primary;
+            }
         }
+
+        &.active {
+            color: $primary;
+
+            &::after {
+                width           : 100%;
+                height          : 2px;
+                background-color: $primary;
+            }
+        }
+
     }
 }
