--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -1,7 +1,9 @@
 @import "variables.scss";
 
 .actuCard {
-    box-shadow: $shadow-card;
+    box-shadow   : $shadow-card;
+    border       : 4px solid $secondary;
+    border-radius: $spacing;
 
     img {
         object-fit: cover;
