--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,7 +14,7 @@
 
 {% block body %}
 	<h1 class="latestActualities pageTitle text-primary my-5 fs-1">Les dernières actualités</h1>
-	<div class="d-flex flex-column align-items-center">
+	<div class="d-flex flex-column align-items-center gap-4">
 		{% include "items/_actualityCards.html.twig" %}
 	</div>
 {% endblock %}
