--- a/templates/items/_actualityCards.html.twig
+++ b/templates/items/_actualityCards.html.twig
@@ -1,8 +1,8 @@
 {% for actuality in actualities %}
-	<div class="actuCard row flex-column flex-lg-row my-3 rounded border border-primary bg-light w-100">
-		<img class="col-lg-3 p-0 rounded-start" src={{ actuality.picture }}{# {% if actuality.picture is defined %} "{{ vich_uploader_asset(actuality, 'pictureFile') }}" {% endif %} #} alt="">
-		<div class="col-lg-9 d-flex flex-column">
-			<h5 class="fs-2 m-2">{{ actuality.title }}</h5>
+	<div class="actuCard row flex-column flex-lg-row bg-light w-100">
+		<img class="col-lg-4 p-0 rounded-start" src={% if actuality.picture is defined %} "{{ vich_uploader_asset(actuality, 'pictureFile') }}" {% endif %} alt="">
+		<div class="col-lg-8 d-flex flex-column">
+			<h5 class="presentationTitle text-primary p-0 fs-2">{{ actuality.title }}</h5>
 			<p class="m-2">{{ actuality.content|nl2br }}</p>
 			<span class="m-2 text-secondary">{{ actuality.createdAt|date("D d M Y") }}</span>
 		</div>
