--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -14,7 +14,8 @@
 
 {% block body %}
 	<h1 class="latestActualities pageTitle text-primary my-5 fs-1">Les dernières actualités</h1>
-	<div class="d-flex flex-column align-items-center gap-4">
+	<div class="d-flex flex-column align-items-center gap-5">
 		{% include "items/_actualityCards.html.twig" %}
+		<a class="btn btn-primary align-self-end" href="https://www.facebook.com/jenniferquenaultreflexologue" target='_blank'>Retrouvez toutes les actualités Facebook</a>
 	</div>
 {% endblock %}
