--- a/assets/styles/home.scss
+++ b/assets/styles/home.scss
@@ -5,7 +5,7 @@
     border       : 4px solid $secondary;
     border-radius: $spacing;
 
-    img {
+    .actuImg {
         object-fit: contain;
     }
 
