--- a/templates/contact/_form.html.twig
+++ b/templates/contact/_form.html.twig
@@ -1,7 +1,7 @@
 <div class="contactElement col-lg-7 bg-white p-4 rounded">
 	<div class="mb-4">
 		Pour toute demande ou prise de rendez-vous, vous pouvez me contacter par téléphone au
-		<b>06 32 56 01 27</b>
+		<a class="text-decoration-none fw-bold btn btn-secondary p-0 px-1 border-0 text-primary" href="tel:0632560127"><i class="bi bi-telephone p-0"></i> 06 32 56 01 27</a>
 		ou via le formulaire ci-dessous :
 	</div>
 	{{ form_start(form) }}
