spacing admin link footer fix

--- a/templates/items/_footer.html.twig
+++ b/templates/items/_footer.html.twig
@@ -1,4 +1,4 @@
-<footer class="footer row m-0 footer-expand-lg bg-primary sticky-bottom justify-content-around align-items-center mt-5" id="footer">
+<footer class="footer row m-0 footer-expand-lg bg-primary justify-content-around align-items-center mt-5" id="footer">
 	<div class="networks d-flex flex-column flex-lg-row align-items-center col-3">
 		<div class="links d-flex w-50 justify-content-start my-1">
 			<a href="https://www.instagram.com/voyage_des_sens_reflexologie/" class="instagram" target="_blank">
@@ -17,6 +17,6 @@
 			<a href="#" class="legal-notice m-1 text-center">Mentions légales</a>
 			<a href="#" class="general-conditions m-1 text-center">Conditions générales</a>
 		</div>
-		<a class="" href="{{ path('login') }}">Espace admin</a>
+		<a class="mt-1 mb-2" href="{{ path('login') }}">Espace admin</a>
 	</div>
 </footer>
