--- a/templates/items/_footer.html.twig
+++ b/templates/items/_footer.html.twig
@@ -17,6 +17,6 @@
 			<a href="#" class="legal-notice m-1 text-center">Mentions légales</a>
 			<a href="#" class="general-conditions m-1 text-center">Conditions générales</a>
 		</div>
-		<a class="mt-1 mb-2" href="{{ path('login') }}">Espace admin</a>
+		<a class="mt-1 mb-2 m-lg-0" href="{{ path('login') }}">Espace admin</a>
 	</div>
 </footer>
