--- a/templates/presentation/index.html.twig
+++ b/templates/presentation/index.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="pageTitle text-primary my-5 fs-1" id="scrollspyPresentation">Présentation</h1>
+	<h1 class="pageTitle text-primary my-5 fs-1">Présentation</h1>
 	<section class="row gap-5 m-0">
 		{% include "presentation/_myJourney.html.twig" %}
 		{% include "presentation/_reflexology.html.twig" %}
