--- a/templates/items/_navbarAdmin.html.twig
+++ b/templates/items/_navbarAdmin.html.twig
@@ -1,21 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-secondary sticky-top p-0 d-flex flex-column">
-	<div class="topHeader bg-primary d-flex justify-content-center align-items-center p-3 w-100">
-		<img class="logoText mx-3" src="{{ asset('build/images/VDS_Horizontal_Complet_Marigold.svg') }}" alt="Logo et texte header"/>
-		<div class="navbarText d-flex flex-column">
-			<span class="text-light fs-3 mx-3">Jennifer Quenault</span>
-			<span class="text-light fs-5 mx-3"><i>Réflexologue</i></span>
-		</div>
-	</div>
-	<div class="align-self-end align-self-lg-center">
-		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<div class="navbar-nav">
-				<a class="nav-link text-primary fs-5 fw-bolder ms-1" href="{{ path('admin_actuality_index') }}">Actualités</a>
-				<a class="nav-link text-primary fs-5 fw-bolder ms-1" href="{{ path('admin_category_index') }}">Catégories de prestations</a>
-				<a class="nav-link text-primary fs-5 fw-bolder ms-1" href="{{ path('admin_session_index') }}">Prestations</a>
-			</div>
-		</div>
-	</div>
-</nav>
+{% extends "items/_navbar.html.twig" %}
+{% block navLinks %}
+	<a class="nav-item nav-link fs-5 ms-lg-1 me-2 {{ app.request.get('_route') is same as 'admin_actuality_index' ? 'active' : '' }}" href="{{ path('admin_actuality_index') }}">Actualités</a>
+	<a class="nav-item nav-link fs-5 ms-lg-1 me-2 {{ app.request.get('_route') is same as 'admin_category_index' ? 'active' : '' }}" href="{{ path('admin_category_index') }}">Catégories de prestations</a>
+	<a class="nav-item nav-link fs-5 ms-lg-1 me-2 {{ app.request.get('_route') is same as 'admin_session_index' ? 'active' : '' }}" href="{{ path('admin_session_index') }}">Prestations</a>
+{% endblock %}
