--- a/templates/admin_category/_delete_form.html.twig
+++ b/templates/admin_category/_delete_form.html.twig
@@ -1,6 +1,6 @@
 <form method="post" action="{{ path('admin_category_delete', {'id': category.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer cette catégorie ?');">
 	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category.id) }}">
-	<button class="btn btn-danger px-3 py-1">
-		<i class="bi bi-trash text-light"></i>
+	<button class="btn btn-danger px-3 py-1 d-flex align-items-center justify-content-center">
+		<i class="bi bi-trash text-light m-1"></i>Supprimer
 	</button>
 </form>
