--- a/templates/admin_category/index.html.twig
+++ b/templates/admin_category/index.html.twig
@@ -1,47 +1,47 @@
 {% extends 'base-admin.html.twig' %}
 
 {% block title %}
+	Admin catégories de services -
 	{{ parent() }}
-	- Administration catégories de services
+{% endblock %}
+
+{% block stylesheets %}
+	{{ encore_entry_link_tags('admin') }}
 {% endblock %}
 
 {% block body %}
-	<main class="container m-5">
-		<h1 class="text-center mb-4">
-			Administration catégories de prestations
-		</h1>
-		<table class="table table-hover bg-light">
-			<thead class="bg-primary text-light">
+	<h1 class="pageTitle text-primary my-5 fs-1">Catégories de prestations</h1>
+	<table class="table table-hover bg-light">
+		<thead class="bg-primary text-light">
+			<tr>
+				<th>Nom</th>
+				<th>
+					<div class="d-flex justify-content-end">
+						<a class="btn btn-secondary px-3 py-1 text-light d-flex align-items-center justify-content-center" href="{{ path('admin_category_new') }}">
+							<i class="bi bi-plus-circle m-1"></i>Catégorie
+						</a>
+					</div>
+				</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for category in categories %}
 				<tr>
-					<th>Nom</th>
-					<th>
-						<div class="d-flex justify-content-end">
-							<a class="btn btn-secondary px-3 py-1 text-light" href="{{ path('admin_category_new') }}">
-								<i class="bi bi-plus-lg me-2"></i>Catégorie
+					<td class="align-middle">{{ category.title }}</td>
+					<td>
+						<div class="d-flex justify-content-end flex-column flex-lg-row gap-3">
+							<a class="btn btn-primary px-3 py-1 d-flex align-items-center justify-content-center" href="{{ path('admin_category_edit', {'id': category.id}) }}">
+								<i class="bi bi-pencil-square m-1"></i>Modifier
 							</a>
+							{{ include('admin_category/_delete_form.html.twig') }}
 						</div>
-					</th>
+					</td>
 				</tr>
-			</thead>
-			<tbody>
-				{% for category in categories %}
-					<tr>
-						<td class="align-middle">{{ category.title }}</td>
-						<td>
-							<div class="d-flex justify-content-end gap-3">
-								<a class="btn btn-primary px-3 py-1" href="{{ path('admin_category_edit', {'id': category.id}) }}">
-									<i class="bi bi-pencil-square"></i>
-								</a>
-								{{ include('admin_category/_delete_form.html.twig') }}
-							</div>
-						</td>
-					</tr>
-				{% else %}
-					<tr>
-						<td colspan="9">Aucune catgéorie trouvée</td>
-					</tr>
-				{% endfor %}
-			</tbody>
-		</table>
-	</main>
+			{% else %}
+				<tr>
+					<td colspan="9">Aucune catgéorie trouvée</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
 {% endblock %}
