--- a/templates/admin_category/index.html.twig
+++ b/templates/admin_category/index.html.twig
@@ -14,7 +14,7 @@
 	<table class="table table-hover bg-light">
 		<thead class="bg-primary text-light">
 			<tr>
-				<th>Nom</th>
+				<th class="fs-4">Nom</th>
 				<th>
 					<div class="d-flex justify-content-end">
 						<a class="btn btn-secondary px-3 py-1 text-light d-flex align-items-center justify-content-center" href="{{ path('admin_category_new') }}">
