--- a/templates/admin_category/new.html.twig
+++ b/templates/admin_category/new.html.twig
@@ -1,16 +1,15 @@
 {% extends 'base-admin.html.twig' %}
 
 {% block title %}
-	Ajouter une catégorie - {{ parent() }}
+	Ajouter une catégorie -
+	{{ parent() }}
 {% endblock %}
 
 {% block body %}
-	<main class="container my-5">
-		<h1 class="text-center">
-			<span>Ajouter une catégorie de prestations</span>
-		</h1>
-		<div class="col-md-6 offset-md-3 fs-4 my-5 border border-primary p-3 rounded bg-light">
+	<h1 class="pageTitle text-primary my-5 fs-1">Nouvelle catégorie</h1>
+	<div class="row justify-content-center m-0">
+		<div class="col-lg-8 fs-4 my-5 border border-3 border-secondary p-3 rounded bg-light">
 			{{ include('admin_category/_form.html.twig') }}
 		</div>
-	</main>
+	</div>
 {% endblock %}
