--- a/templates/admin_category/edit.html.twig
+++ b/templates/admin_category/edit.html.twig
@@ -1,16 +1,16 @@
 {% extends 'base-admin.html.twig' %}
 
 {% block title %}
-	Modifier une catégorie -
+	Modifier catégorie -
 	{{ parent() }}
 
 {% endblock %}
 
 {% block body %}
-	<main class="container my-5">
-		<h1 class="text-center text-primary">Modifier une catégorie</h1>
-		<div class="col-md-6 offset-md-3 fs-4 my-5 bg-light border rounded p-3 border-primary">
+	<h1 class="pageTitle text-primary my-5 fs-1">Modifier la catégorie</h1>
+	<div class="row justify-content-center m-0">
+		<div class="col-lg-8 fs-4 my-5 border border-3 border-secondary p-3 rounded bg-light">
 			{{ include('admin_category/_form.html.twig') }}
 		</div>
-	</main>
+	</div>
 {% endblock %}
