--- a/templates/admin_category/new.html.twig
+++ b/templates/admin_category/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base-admin.html.twig' %}
 
 {% block title %}
-	Ajouter une catégorie -
+	Ajouter catégorie -
 	{{ parent() }}
 {% endblock %}
 
