--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -29,6 +29,6 @@ h2 {
 }
 
 .pageTitle {
-    backdrop-filter : blur(7px);
+    background-color: rgba(255, 255, 255, 0.419);
     border-block-end: 3px solid $secondary;
 }
