--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -16,7 +16,7 @@
 	</div>
 	<section class="row flex-column align-items-center m-0">
 		<div class="loginPrompt mb-5 col-lg-6 col-12 p-0 bg-light rounded border border-2 border-secondary">
-			<h2 class="text-center p-2 fs-4 bg-primary text-light rounded-top w-100">
+			<h2 class="text-center p-2 fs-3 text-primary rounded-top w-100">
 				Connexion
 			</h2>
 			<form action="{{ path('login') }}" method="post" class="d-flex flex-column my-2 p-3 gap-4">
