--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -12,8 +12,8 @@
 {% block body %}
 	<h1 class="pageTitle text-primary my-5 fs-1">Espace administrateur</h1>
 	<div class="row justify-content-around align-items-center flex-column flex-lg-row gap-5">
-		<a class="btn btn-secondary fs-5 col-9 col-lg-3 border border-primary shadow rounded" href="{{ path('admin_actuality_index') }}">Les actualités</a>
-		<a class="btn btn-secondary fs-5 col-9 col-lg-3 border border-primary shadow rounded" href="{{ path('admin_category_index') }}">Les catégories de prestations</a>
-		<a class="btn btn-secondary fs-5 col-9 col-lg-3 border border-primary shadow rounded" href="{{ path('admin_session_index') }}">Les prestations</a>
+		<a class="btn btn-secondary fs-5 col-9 col-lg-3 border border-2 border-primary shadow rounded" href="{{ path('admin_actuality_index') }}">Les actualités</a>
+		<a class="btn btn-secondary fs-5 col-9 col-lg-3 border border-2 border-primary shadow rounded" href="{{ path('admin_category_index') }}">Les catégories de prestations</a>
+		<a class="btn btn-secondary fs-5 col-9 col-lg-3 border border-2 border-primary shadow rounded" href="{{ path('admin_session_index') }}">Les prestations</a>
 	</div>
 {% endblock %}
