--- a/templates/admin_category/index.html.twig
+++ b/templates/admin_category/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base-admin.html.twig' %}
 
 {% block title %}
-	Admin catégories de services -
+	Admin catégories de perstations -
 	{{ parent() }}
 {% endblock %}
 
@@ -10,7 +10,9 @@
 {% endblock %}
 
 {% block body %}
-	<h1 class="pageTitle text-primary my-5 fs-1">Catégories de prestations</h1>
+	<h1 class="pageTitle text-primary my-5 fs-1">
+		Catégories de prestations
+	</h1>
 	<table class="table table-hover bg-light">
 		<thead class="bg-primary text-light">
 			<tr>
