--- a/templates/admin_session/_delete_form.html.twig
+++ b/templates/admin_session/_delete_form.html.twig
@@ -1,6 +1,6 @@
-<form method="post" action="{{ path('admin_session_delete', {'id': session.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer ce session ?');">
+<form method="post" action="{{ path('admin_session_delete', {'id': session.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer {{ session.title }} de {{ session.category.title }} ?');">
 	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ session.id) }}">
-	<button class="btn btn-danger px-3 py-1">
-		<i class="bi bi-trash text-light"></i>
+	<button class="btn btn-danger px-3 py-1 d-flex align-items-center justify-content-center">
+		<i class="bi bi-trash text-light m-1"></i>Supprimer
 	</button>
 </form>
