--- a/templates/admin_session/index.html.twig
+++ b/templates/admin_session/index.html.twig
@@ -1,56 +1,66 @@
 {% extends 'base-admin.html.twig' %}
 
 {% block title %}
-	Administration prestations - {{ parent() }}
+	Admin prestations -
+	{{ parent() }}
 {% endblock %}
 
+{% block stylesheets %}
+	{{ encore_entry_link_tags('admin') }}
+{% endblock %}
+
+
 {% block body %}
-	<main class="container m-5">
-		<h1 class="text-center mb-4">
-			Administration prestations
-		</h1>
-		<table class="table table-hover bg-light">
-			<thead class="bg-primary text-light">
-				<tr>
-					<th>Titre</th>
-					<th>Description</th>
-					<th>
-						<a class="d-flex btn btn-secondary px-3 py-1 text-light" href="{{ path('admin_category_new') }}">
-							<i class="bi bi-plus-lg me-2"></i>Catégorie
+	<h1 class="pageTitle text-primary my-5 fs-1">
+		Administration prestations
+	</h1>
+	<table class="table table-hover bg-light">
+		<thead class="bg-primary text-light">
+			<tr>
+				<th class="fs-4">Titre</th>
+				<th>
+					<div class="d-flex justify-content-end">
+						<a class="btn btn-secondary px-3 py-1 text-light d-flex align-items-center justify-content-center" href="{{ path('admin_category_new') }}">
+							<i class="bi bi-plus-circle m-1"></i>Catégorie
 						</a>
-					</th>
-				</tr>
-			</thead>
-			<tbody>
-				{% for category in categories %}
-					<tr class="text-light">
-						<td colspan="2" class="text-center align-middle text-primary fs-4">{{ category.title }}</td>
-						<td>
-							<a class="d-flex btn btn-primary px-3 py-1 text-light" href="{{ path('admin_session_new', {'id': category.id}) }}">
-								<i class="bi bi-plus-lg me-2"></i>Prestation
+					</div>
+				</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for category in categories %}
+				<tr class="text-light">
+					<td class="text-center align-middle text-primary fs-4">{{ category.title }}</td>
+					<td>
+						<div class="d-flex justify-content-end flex-column flex-lg-row gap-3">
+							<a class="btn btn-success px-3 py-1 text-light d-flex align-items-center justify-content-center" href="{{ path('admin_session_new', {'id': category.id}) }}">
+								<i class="bi bi-plus-circle m-1"></i>Prestation
 							</a>
+							<a class="btn btn-primary px-3 py-1 d-flex align-items-center justify-content-center" href="{{ path('admin_category_edit', {'id': category.id}) }}">
+								<i class="bi bi-pencil-square m-1"></i>Modifier
+							</a>
+							{{ include('admin_category/_delete_form.html.twig') }}
+						</div>
+					</td>
+				</tr>
+				{% for session in category.sessions %}
+					<tr>
+						<td class="align-middle">{{ session.title }}</td>
+						<td>
+							<div class="d-flex justify-content-end flex-column flex-lg-row gap-3">
+								<a class="btn btn-primary px-3 py-1 d-flex align-items-center justify-content-center" href="{{ path('admin_session_edit', {'id': session.id}) }}">
+									<i class="bi bi-pencil-square m-1"></i>Modifier
+								</a>
+								{{ include('admin_session/_delete_form.html.twig') }}
+							</div>
 						</td>
 					</tr>
-					{% for session in category.sessions %}
-						<tr>
-							<td class="align-middle">{{ session.title }}</td>
-							<td class="align-middle">{{ session.description }}</td>
-							<td>
-								<div class="d-flex justify-content-end gap-3">
-									<a class="btn btn-primary px-3 py-1" href="{{ path('admin_session_edit', {'id': session.id}) }}">
-										<i class="bi bi-pencil-square"></i>
-									</a>
-									{{ include('admin_session/_delete_form.html.twig') }}
-								</div>
-							</td>
-						</tr>
-					{% endfor %}
-				{% else %}
-					<tr>
-						<td colspan="9">Aucun service trouvé</td>
-					</tr>
 				{% endfor %}
-			</tbody>
-		</table>
-	</main>
+			{% else %}
+				<tr>
+					<td colspan="9">Aucun service trouvé</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
 {% endblock %}
