--- a/templates/admin_category/_delete_form.html.twig
+++ b/templates/admin_category/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('admin_category_delete', {'id': category.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer cette catégorie ?');">
+<form method="post" action="{{ path('admin_category_delete', {'id': category.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer la catégorie \&#34;{{ category.title }}\&#34; ?');">
 	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ category.id) }}">
 	<button class="btn btn-danger px-3 py-1 d-flex align-items-center justify-content-center">
 		<i class="bi bi-trash text-light m-1"></i>Supprimer
