--- a/templates/admin_category/edit.html.twig
+++ b/templates/admin_category/edit.html.twig
@@ -10,7 +10,9 @@
 	<h1 class="pageTitle text-primary my-5 fs-1">Modifier la catégorie</h1>
 	<div class="row justify-content-center m-0">
 		<div class="col-lg-8 fs-4 my-5 border border-3 border-secondary p-3 rounded bg-light">
-			{{ include('admin_category/_form.html.twig') }}
+			{% autoescape "false" %}
+				{% include 'admin_category/_form.html.twig' with {'button_label' : '<i class="bi bi-pencil-square m-1"></i>Modifier'} %}
+			{% endautoescape %}
 		</div>
 	</div>
 {% endblock %}
