--- a/templates/admin_category/new.html.twig
+++ b/templates/admin_category/new.html.twig
@@ -8,7 +8,7 @@
 {% block body %}
 	<h1 class="pageTitle text-primary my-5 fs-1">Nouvelle catégorie</h1>
 	<div class="row justify-content-center m-0">
-		<div class="col-lg-8 fs-4 my-5 border border-3 border-secondary p-3 rounded bg-light">
+		<div class="col-lg-8 fs-4 border border-3 border-secondary p-3 rounded bg-light">
 			{{ include('admin_category/_form.html.twig') }}
 		</div>
 	</div>
