--- a/templates/admin_session/new.html.twig
+++ b/templates/admin_session/new.html.twig
@@ -6,13 +6,12 @@
 {% endblock %}
 
 {% block body %}
-	<main class="container my-5">
-		<h1 class="text-center d-flex flex-column">
-			<span>Ajouter une prestation</span>
-			<span>à "{{ category.title }}"</span>
-		</h1>
-		<div class="col-md-6 offset-md-3 fs-4 my-5 bg-light border rounded p-3 border-primary">
+	<h1 class="pageTitle text-primary my-5 fs-1">
+		Ajouter une prestation à "{{ category.title }}"
+	</h1>
+	<div class="row justify-content-center m-0">
+		<div class="col-lg-8 fs-4 border border-3 border-secondary p-3 rounded bg-light">
 			{{ include('admin_session/_form.html.twig') }}
 		</div>
-	</main>
+	</div>
 {% endblock %}
